# docassist

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.ru.md  README.uk.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  main.py
app/api/: deps.py  errors.py
app/api/routes/: __init__.py  chat.py  conversations.py  documents.py  health.py
app/core/: config.py  exceptions.py  logging.py  retry.py
app/db/: base.py  session.py
app/models/: __init__.py  chunk.py  conversation.py  document.py
app/repositories/: chunks.py  conversations.py  documents.py
app/schemas/: chat.py  common.py  document.py
app/services/: chunking.py  embeddings.py  extraction.py  ingestion.py  llm.py  queue.py  rag.py  retrieval.py  storage.py
app/static/: index.html
bot/: __init__.py  __main__.py  client.py  handlers.py
tests/: conftest.py  fakes.py  test_chunking.py  test_documents_api.py  test_integration_chat.py  test_retrieval.py
