[project]
name = "docassist"
version = "0.1.0"
description = "Production-grade RAG assistant over your documents (FastAPI + pgvector + Telegram)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "bot"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "bot", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM", "ASYNC", "RUF"]
# FastAPI/aiogram rely on callables in argument defaults (Depends/File/Form).
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "bot"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "(alembic/|tests/)"

[[tool.mypy.overrides]]
module = ["pgvector.*", "pypdf.*", "docx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["integration: end-to-end tests that require the test database"]
