[project]
name = "docassist"
version = "0.1.0"
description = "Production-grade RAG assistant over your documents (FastAPI + pgvector + Telegram)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "bot"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "bot", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# Pyflakes + pycodestyle errors gate CI. Line length and import ordering are
# applied by `ruff format` / pre-commit, so formatting never blocks the build.
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.isort]
known-first-party = ["app", "bot"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = "(alembic/|tests/)"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["integration: end-to-end tests that require the test database"]
